# alloy

./: .gitignore  CMakeLists.txt  README.md
include/yk/: alloy.hpp
include/yk/alloy/: adapt_std_tuple.hpp  adaptor.hpp  get.hpp  keyed_value.hpp  non_type_list.hpp  size.hpp  traits.hpp  tuple.hpp  tuple_cat.hpp  tuple_split.hpp
include/yk/alloy/adapt/: adapt_boost_fusion_vector.hpp  adapt_std_pair.hpp  adapt_std_tuple.hpp
include/yk/alloy/detail/: deduce_t.hpp  forward_like_t.hpp  no_unique_address.hpp  pack_indexing.hpp  specialization_of.hpp  tuple_deduce_t.hpp
include/yk/alloy/get/: get.hpp
include/yk/alloy/traits/: associative_tuple_like.hpp  tuple_like.hpp
include/yk/alloy/tuple/: default_initialize.hpp  tuple.hpp  value_initialize.hpp
include/yk/alloy/tuple/detail/: tuple_impl.hpp
test/: CMakeLists.txt  main.cpp
